2008-05-23  Kjartan Maraas  <kmaraas@gnome.org>

	* src/plugins/publish/publish-plugin.ui:
	Don't translate widget label.

2008-05-16  Bastien Nocera  <hadess@hadess.net>

	* src/totem-audio-preview.c (main):
	* src/totem-video-indexer.c (main):
	* src/totem-video-thumbnailer.c (main): Use
	g_option_context_get_help () to print out the help

============ Version 2.23.3

2008-05-14  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.23.3

2008-05-11  Guillaume Desmottes  <gdesmott@gnome.org>
	* COPYING
	* src/totem-subtitle-encoding.c: Change licence from GPL
	to LGPL (closes: #515809)

2008-05-09  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemGMPPlugin.cpp: fix plugin not showing up on
	http://www.la1.be 's "journal télévisé" (closes: #532260)

2008-05-08  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c (resolve_redirect),
	(on_got_redirect): Same change for the browser plugin

2008-05-08  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (on_got_redirect): Fix build against totem-pl-parser
	trunk

2008-05-08  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemBasicPlugin.cpp: Add Totem specific
	application/x-totem-plugin mime-type (Closes: #531734)

	* browser-plugin/totemPluginGlue.cpp: Use GIO to get the description
	of mime-types

2008-05-05  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_open_with_subtitle):
	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_open_with_subtitle): Fix possible warnings
	when the URL doesn't have any local paths. Remove some useless
	condition in the GStreamer backend, there was no MRL, we remove it a
	few lines before

2008-05-04  Bastien Nocera  <hadess@hadess.net>

	* src/backend/video-utils.c (totem_display_is_local):
	Fix string checking, spotted by Will Thompson
	<will@willthompson.co.uk> (Closes: #531261)

2008-05-03  Bastien Nocera  <hadess@hadess.net>
