@@ -135,6 +135,14 @@
 			<property name="fill">True</property>
 		</packing>
 	</child>
+	<child>
+		<object class="GtkProgressBar" id="yt_progress_bar"/>
+		<packing>
+			<property name="padding">0</property>
+			<property name="expand">False</property>
+			<property name="fill">True</property>
+		</packing>
+	</child>
 </object>
 
 </interface>
